--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -1,3 +1,13 @@
-#currentWeather {
-    display: none;
+body,html {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
 }
+
+.removeBlock {
+    display: none!important;
+}
+
+.displayBlock {
+    display: block;
+};
